# wme

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  RTE.sln  frag.spv  imgui.ini  vert.spv
Demo/: Demo.vcxproj  (+1 more)
engine/: CMakeLists.txt
engine/AssetImporter/: AssetImporter.cpp  CMakeLists.txt
engine/AssetImporter/include/rte/: AssetImporter.h
engine/Audio/: AudioEmitter.cpp  AudioListener.cpp  AudioManager.cpp  CMakeLists.txt  Emitter.cpp  Listener.cpp
engine/Audio/include/rte/: AudioEmitter.hpp  AudioListener.hpp  AudioManager.hpp  Emitter.hpp  Listener.hpp
engine/AudioEmitter/: AudioEmitter.cpp  CMakeLists.txt
engine/AudioEmitter/include/rte/: AudioEmitter.hpp
engine/HighLevelRendering/: CmakeLists.txt  HighLevelRenderer.cpp
engine/HighLevelRendering/include/rte/: HighLevelRenderer.h
engine/Importer/: AssimpMeshImporter.cpp  CMakeLists.txt  ImportFunctions.cpp  Importer.cpp  MeshImporter.cpp  ModelImporter.cpp  STBITextureImporter.cpp
engine/ModelImporter/: CMakeLists.txt  ModelImporter.cpp
engine/Physics/: CMakeLists.txt  PhysicsManager.cpp  RigidBody.cpp
engine/Runtime/: CMakeLists.txt  Component.cpp  GameObject.cpp  Scene.cpp  SceneManager.cpp
engine/RuntimeArchitecture/: AudioManager.cpp  CMakeLists.txt  Component.cpp  ComponentPool.cpp  GameObject.cpp  MemoryManager.cpp  Scene.cpp  SceneManager.cpp
engine/StandardComponents/: AudioComponent.cpp  CmakeLists.txt  MeshComponent.cpp  PhysicsComponent.cpp  TransformComponent.cpp
engine/StdComponents/: AudioComponent.cpp  CameraComponent.cpp  CmakeLists.txt  DirectionalLightComponent.cpp  ListenerComponent.cpp  MeshComponent.cpp  PhysicsComponent.cpp  PointLightComponent.cpp  TransformComponent.cpp
engine/asset_management/: AssetManager.cpp  CMakeLists.txt  FileTree.cpp
engine/asset_management/JSON/: JSONArray.cpp  JSONBoolean.cpp  JSONManager.cpp  JSONNull.cpp  JSONNumber.cpp  JSONObject.cpp  JSONString.cpp  JSONValue.cpp
engine/asset_management/include/: Asset.hpp  AssetManager.hpp  FileTree.hpp
engine/assets/models/: box.ply  box1x1x1.ply  dragon.ply  floor.ply  monkey.blend  monkey.ply  monkey1x1x1.ply  monkeySmooth.ply  nested.blend  nested.ply  plane.blend  plane.blend1  plane.ply  realPlane.fbx  sphere.blend  sphere.blend1  sphere.ply
engine/assets/shaders/: Fragment.glsl  Vertex.glsl  compile.bat  frag.spv  lineShader.frag  lineShader.vert  lineVert.spv  rchit.spv  rgen.spv  rmiss.spv  rt_shader.rchit  rt_shader.rgen  rt_shader.rmiss  shader.frag  shader.vert  shadowray.rmiss  srmiss.spv  vert.spv
engine/assets/textures/: plane.ply
engine/core/: CMakeLists.txt  RTEConfig.cpp  RTECore.cpp
engine/ecs/: CMakeLists.txt  ECS.cpp  ECSComponent.cpp  ECSCore.cpp  ECSEntity.cpp  ECSSystem.cpp
engine/gui/: CMakeLists.txt  GUIModule.cpp  imgui_impl_glfw_vulkan.h  imgui_impl_vulkan.cpp
engine/include/: Defs.h  ECS.h  RTE.h  RTEException.h  RenderStructs.h
engine/include/rte/: RTEProjectProperties.h
engine/platform/: CMakeLists.txt  InputCommand.cpp  InputManager.cpp  Platform.cpp  WindowManager.cpp
engine/renderer/: AccelerationStructureRT.cpp  AccelerationStructureRT.h  CMakeLists.txt  CommandBufferManager.cpp  CommandBufferManager.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DescriptorSet.cpp  DescriptorSet.h  DeviceMemoryManager.cpp  DeviceMemoryManager.h  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImageManager.cpp  ImageManager.hpp  Instance.cpp  Instance.hpp  Primitives.cpp  RTUtilities.h  RenderLogicStructs.h  RenderManager.cpp  RenderPass.cpp  Renderer.cpp  RenderingManager.cpp  Renderpass.hpp  SwapChain.cpp  SwapChain.hpp  UNUSED_FUNCTIONS.cpp  Utilities.cpp  Utilities.h  main.cpp
engine/renderer/include/: RenderManager.h  RenderStructs.h
engine/renderer/shader/: AbstractSyntax.cpp  AbstractSyntax.hpp  ShaderGenerator.cpp  ShaderGenerator.hpp
engine/utilities/: CMakeLists.txt  Utility.cpp
(+2637 files in other folders)
