add_subdirectory(core)
add_subdirectory(gui)
add_subdirectory(renderer)
add_subdirectory(Physics)
add_subdirectory(platform)
add_subdirectory(utilities)
add_subdirectory(third_party)
add_subdirectory(Runtime)
add_subdirectory(Importer)
add_subdirectory(StdComponents)
add_subdirectory(Audio)
add_subdirectory(asset_management)
